# Parameter2

./: CMakeLists.txt  README.md
include/: Square.h  TextWrapper.h
src/: main.cpp
